test/errors/cpp_error/zs/wrong_set_cpp_allocator_error.zs
package wrong_set_cpp_allocator_error;
